tests/invalid/unsupported_expression_dict/main.py
def main() -> None:
    d = {1: 2, 3: 4}
